Uploaded image for project: 'Qpid'
  1. Qpid
  2. QPID-4257

Windows+SSL: Client hang on broker close, broker memory leak

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 0.12, 0.13, 0.14, 0.15, 0.16, 0.17, 0.18, 0.19
    • 0.19
    • C++ Broker, C++ Client
    • Windows client on Windows 7, Windows broker on Server 2K8, using SSL.

    Description

      Windows clients hang when broker dies via SSL connection - fetch never returns even w/ IMMEDIATE timeout.
      Windows broker memory grows linearly with SSL connection count, leak per connection, until broker exhausts memory and crashes.

      Attachments

        Activity

          People

            Unassigned Unassigned
            kbonin Kerry Bonin
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - 168h
                168h
                Remaining:
                Remaining Estimate - 168h
                168h
                Logged:
                Time Spent - Not Specified
                Not Specified