QPID-4257 Windwos + SSL: broker/client memory leaks and client hang. Patch from Kerry Bonin

git-svn-id: https://svn.apache.org/repos/asf/qpid/trunk/qpid@1382026 13f79535-47bb-0310-9956-ffa450edef68